# Problems-TP

./: Army.cpp  Army.h  CMakeCache.txt  CMakeLists.txt  Constants.cpp  Factory.cpp  Factory.h  GAME  Game.cpp  Game.h  Makefile  My_Units.cpp  My_Units.h  Player.cpp  Player.h  README.md  README.sh  TP_Project_Game(2 check).drawio  TP_Project_Game.drawio  Unit.cpp  Unit.h  cmake_install.cmake  main.cpp  main.yml
.github/workflows/: main.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.h
task2/C/: main.h  main_test.cpp  tests_realize.cpp
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt  buffer.cpp
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task4/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task4/tests/03-weather/: WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
task6/cmake-with-flask/: Dockerfile
