cmake_minimum_required(VERSION 3.0)
set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
add_library(buffer SHARED buffer.cpp)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_INSTALL_PREFIX}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_INSTALL_PREFIX}/bin)

install(FILES "${SimpleLibrary_SOURCE_DIR}/include/buffer.h" DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
install(TARGETS buffer LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)